started from scratch with css on home page

--- a/fish.html
+++ b/fish.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,241 +15,244 @@
 <body>
 
     <header>
-        <h1 id="Title">Keeping Fish Simple</h1>                   
+        <h1 id="Title">Keeping Fish Simple</h1>
         <nav>
             <ul id="menu">
-                <li><a href="plants.html">Plants</a></li>                
+                <li><a href="plants.html">Plants</a></li>
                 <li><a href="fish.html">Fish</a></li>
                 <li><a href="index.html">Home</a></li>
             </ul>
-        </nav>          
+        </nav>
     </header>
-    
+
     <h1>Choosing your fish</h1>
     <p>
-        Selecting your fish for your new aquarium is the most exciting part of setting up a new tank. However, for begginers the choice can be overwhelming, as there are so many choices to choose from and not every fish can live peacefully together. To help you through this selction process, we have set out a list of fish that we think is great for begginers.
+        Selecting your fish for your new aquarium is the most exciting part of setting up a new tank. However, for
+        begginers the choice can be overwhelming, as there are so many choices to choose from and not every fish can
+        live peacefully together. To help you through this selction process, we have set out a list of fish that we
+        think is great for begginers.
     </p>
-    
+
     <section>
         <h1>Center Piece Fish</h1>
         <h2 class="angelfish">Angelfish</h2>
         <img src='../assets/images/Angelfish.jpg' alt="Angelfish">
         <table>
-        <tr>
-            <th>Tank Size</th>
-            <th>Water temperature</th>
-            <th>Temperament</th>
-            <th>Diet</th>
-        </tr>
-        <tr>
-            <td>20 gallons</td>
-            <td>24°C-28°C</td>
-            <td>Semi-Aggressive</td>
-            <td>Omnivore</td>
-        </tr>
+            <tr>
+                <th>Tank Size</th>
+                <th>Water temperature</th>
+                <th>Temperament</th>
+                <th>Diet</th>
+            </tr>
+            <tr>
+                <td>20 gallons</td>
+                <td>24°C-28°C</td>
+                <td>Semi-Aggressive</td>
+                <td>Omnivore</td>
+            </tr>
         </table>
     </section>
 
-<section>
-    <h2>Honey Gourami</h2>
-    <img src='../assets/images/Honey Gourami.jpg' alt="Honey Gourami fish">
-    <table>
-    <tr>
-        <th>Tank Size</th>
-        <th>Water temperature</th>
-        <th>Temperament</th>
-        <th>Diet</th>
-    </tr>
-    <tr>
-        <td>10 gallons</td>
-        <td>24°C-28°C</td>
-        <td>Peaceful</td>
-        <td>Omnivore</td>
-    </tr>
-    </table>
-</section>
+    <section>
+        <h2>Honey Gourami</h2>
+        <img src='../assets/images/Honey Gourami.jpg' alt="Honey Gourami fish">
+        <table>
+            <tr>
+                <th>Tank Size</th>
+                <th>Water temperature</th>
+                <th>Temperament</th>
+                <th>Diet</th>
+            </tr>
+            <tr>
+                <td>10 gallons</td>
+                <td>24°C-28°C</td>
+                <td>Peaceful</td>
+                <td>Omnivore</td>
+            </tr>
+        </table>
+    </section>
 
-<section>
-    <h2>Betta</h2>
-    <img src='../assets/images/Betta.jpg' alt="Betta fish">
-    <table>
-    <tr>
-        <th>Tank Size</th>
-        <th>Water temperature</th>
-        <th>Temperament</th>
-        <th>Diet</th>
-    </tr>
-    <tr>
-        <td>10 gallons</td>
-        <td>23°C-29°C</td>
-        <td>Semi-Aggressive</td>
-        <td>Carnivore</td>
-    </tr>
-    </table>
-</section>
+    <section>
+        <h2>Betta</h2>
+        <img src='../assets/images/Betta.jpg' alt="Betta fish">
+        <table>
+            <tr>
+                <th>Tank Size</th>
+                <th>Water temperature</th>
+                <th>Temperament</th>
+                <th>Diet</th>
+            </tr>
+            <tr>
+                <td>10 gallons</td>
+                <td>23°C-29°C</td>
+                <td>Semi-Aggressive</td>
+                <td>Carnivore</td>
+            </tr>
+        </table>
+    </section>
 
     <h1>Schooling Fish</h1>
 
-<section>
-    <h2>Rummy Nose Tetra</h2>
-    <img src='../assets/images/Rummy Nose tetra.jpg' alt="Rummy Nose Tetra Fish">
-    <table>
-    <tr>
-        <th>Tank Size</th>
-        <th>Water temperature</th>
-        <th>Temperament</th>
-        <th>Diet</th>
-    </tr>
-    <tr>
-        <td>20 gallons</td>
-        <td>23°C-29°C</td>
-        <td>Peaceful</td>
-        <td>Omnivore</td>
-    </tr>
-    </table>
-</section>
+    <section>
+        <h2>Rummy Nose Tetra</h2>
+        <img src='../assets/images/Rummy Nose tetra.jpg' alt="Rummy Nose Tetra Fish">
+        <table>
+            <tr>
+                <th>Tank Size</th>
+                <th>Water temperature</th>
+                <th>Temperament</th>
+                <th>Diet</th>
+            </tr>
+            <tr>
+                <td>20 gallons</td>
+                <td>23°C-29°C</td>
+                <td>Peaceful</td>
+                <td>Omnivore</td>
+            </tr>
+        </table>
+    </section>
 
-<section>
-    <h2>Cherry Barb</h2>
-    <img src='./assets/images/Cherry Barb.jpg' alt="Cherry Barb Fish">
+    <section>
+        <h2>Cherry Barb</h2>
+        <img src='./assets/images/Cherry Barb.jpg' alt="Cherry Barb Fish">
 
-    <table>
-    <tr>
-        <th>Tank Size</th>
-        <th>Water temperature</th>
-        <th>Temperament</th>
-        <th>Diet</th>
-    </tr>
-    <tr>
-        <td>20 gallons</td>
-        <td>23°C-26°C</td>
-        <td>Peaceful</td>
-        <td>Omnivore</td>
-    </tr>
-    </table>
-</section>
+        <table>
+            <tr>
+                <th>Tank Size</th>
+                <th>Water temperature</th>
+                <th>Temperament</th>
+                <th>Diet</th>
+            </tr>
+            <tr>
+                <td>20 gallons</td>
+                <td>23°C-26°C</td>
+                <td>Peaceful</td>
+                <td>Omnivore</td>
+            </tr>
+        </table>
+    </section>
 
-<section>
-    <h2>Ember Tetra</h2>
-    <img src='../assets/images/Ember tetra.jpg' alt="Ember Tetra fish">
+    <section>
+        <h2>Ember Tetra</h2>
+        <img src='../assets/images/Ember tetra.jpg' alt="Ember Tetra fish">
 
-    <table>
-    <tr>
-   <th>Tank Size</th>
-   <th>Water temperature</th>
-   <th>Temperament</th>
-   <th>Diet</th>
-    </tr>
-    <tr>    
-    <td>10 gallons</td>
-    <td>23°C-26°C</td>
-    <td>Peaceful</td>
-    <td>Omnivore</td>
-    </tr>
-    </table>
-</section>
+        <table>
+            <tr>
+                <th>Tank Size</th>
+                <th>Water temperature</th>
+                <th>Temperament</th>
+                <th>Diet</th>
+            </tr>
+            <tr>
+                <td>10 gallons</td>
+                <td>23°C-26°C</td>
+                <td>Peaceful</td>
+                <td>Omnivore</td>
+            </tr>
+        </table>
+    </section>
 
-<section>
-<h2>Neon Tetra</h2>
-<img src='../assets/images/Neon Tetra.jpg' alt="Neon Tetra Fish">
+    <section>
+        <h2>Neon Tetra</h2>
+        <img src='../assets/images/Neon Tetra.jpg' alt="Neon Tetra Fish">
 
-<table>
-<tr>
-   <th>Tank Size</th>
-   <th>Water temperature</th>
-   <th>Temperament</th>
-   <th>Diet</th>
-</tr>
-<tr>
-   <td>10 gallons</td>
-   <td>23°C–29°C</td>
-   <td>Peaceful</td>
-   <td>Omnivore</td>
-</tr>
-</table>
-</section>
+        <table>
+            <tr>
+                <th>Tank Size</th>
+                <th>Water temperature</th>
+                <th>Temperament</th>
+                <th>Diet</th>
+            </tr>
+            <tr>
+                <td>10 gallons</td>
+                <td>23°C–29°C</td>
+                <td>Peaceful</td>
+                <td>Omnivore</td>
+            </tr>
+        </table>
+    </section>
 
-<h1>Bottom Dwelling Fish</h1>
+    <h1>Bottom Dwelling Fish</h1>
 
-<section>
-<h2>Bronze Corydoras</h2>
-<img src='../assets/images/Bronze corydors.jpg' alt="Bronze Corydora catfish">
+    <section>
+        <h2>Bronze Corydoras</h2>
+        <img src='../assets/images/Bronze corydors.jpg' alt="Bronze Corydora catfish">
 
-<table>
-<tr>
-   <th>Tank Size</th>
-   <th>Water temperature</th>
-   <th>Temperament</th>
-   <th>Diet</th>
-</tr>
-<tr>
-   <td>10 gallons</td>
-   <td>22°C–26°C</td>
-   <td>Peaceful</td>
-   <td>Omnivore</td>
-</tr>
-</table>
-</section>
+        <table>
+            <tr>
+                <th>Tank Size</th>
+                <th>Water temperature</th>
+                <th>Temperament</th>
+                <th>Diet</th>
+            </tr>
+            <tr>
+                <td>10 gallons</td>
+                <td>22°C–26°C</td>
+                <td>Peaceful</td>
+                <td>Omnivore</td>
+            </tr>
+        </table>
+    </section>
 
-<section>
-<h2>Panda Corydoras</h2>
-<img src='../assets/images/panda-corydoras.jpg' alt="Panda Corydora catfish">
+    <section>
+        <h2>Panda Corydoras</h2>
+        <img src='../assets/images/panda-corydoras.jpg' alt="Panda Corydora catfish">
 
-<table>
-<tr>
-   <th>Tank Size</th>
-   <th>Water temperature</th>
-   <th>Temperament</th>
-   <th>Diet</th>
-</tr>
-<tr>
-   <td>10 gallons</td>
-   <td>22°C–27°C</td>
-   <td>Peaceful</td>
-   <td>Omnivore</td>
-</tr>
-</table>
-</section>
+        <table>
+            <tr>
+                <th>Tank Size</th>
+                <th>Water temperature</th>
+                <th>Temperament</th>
+                <th>Diet</th>
+            </tr>
+            <tr>
+                <td>10 gallons</td>
+                <td>22°C–27°C</td>
+                <td>Peaceful</td>
+                <td>Omnivore</td>
+            </tr>
+        </table>
+    </section>
 
-<section>
-<h2>Kuhli Loach</h2>
-<img src='../assets/images/kuhli-loach.jpg' alt="Kuhli Loach Fish">
+    <section>
+        <h2>Kuhli Loach</h2>
+        <img src='../assets/images/kuhli-loach.jpg' alt="Kuhli Loach Fish">
 
-<table>
-<tr>
-   <th>Tank Size</th>
-   <th>Water temperature</th>
-   <th>Temperament</th>
-   <th>Diet</th>
-</tr>
-<tr>
-   <td>20 gallons</td>
-   <td>24°C-29°C</td>
-   <td>Peaceful</td>
-   <td>Omnivore</td>
-</tr>
-</table>
-</section>
+        <table>
+            <tr>
+                <th>Tank Size</th>
+                <th>Water temperature</th>
+                <th>Temperament</th>
+                <th>Diet</th>
+            </tr>
+            <tr>
+                <td>20 gallons</td>
+                <td>24°C-29°C</td>
+                <td>Peaceful</td>
+                <td>Omnivore</td>
+            </tr>
+        </table>
+    </section>
 
-<section>
-<h2>Hillstream Loach</h2>
-<img src='../assets/images/Hillstream Loach.jpg' alt="Hillstream Loach Fish">
+    <section>
+        <h2>Hillstream Loach</h2>
+        <img src='../assets/images/Hillstream Loach.jpg' alt="Hillstream Loach Fish">
 
-<table>
-<tr>
-   <th>Tank Size</th>
-   <th>Water temperature</th>
-   <th>Temperament</th>
-   <th>Diet</th>
-</tr>
-<tr>
-   <td>10 gallons</td>
-   <td>23°C–29°C</td>
-   <td>Peaceful</td>
-   <td>Omnivore</td>
-</tr>
-</table>
-</section>
+        <table>
+            <tr>
+                <th>Tank Size</th>
+                <th>Water temperature</th>
+                <th>Temperament</th>
+                <th>Diet</th>
+            </tr>
+            <tr>
+                <td>10 gallons</td>
+                <td>23°C–29°C</td>
+                <td>Peaceful</td>
+                <td>Omnivore</td>
+            </tr>
+        </table>
+    </section>
 
     <footer>
         <form>
@@ -260,9 +264,10 @@
             <input type="submit" value="Sign Up">
 
         </form>
-        <a target= "_blank" href="https://www.facebook.com" class="fa fa-facebook">Facebook</a>
-        <a target= "_blank" href="https://www.instagram.com" class="fa fa-instagram">Instagram</a>
-        <a target= "_blank" href="https://www.youtube.com/" class="fa fa-youtube">Youtube</a>
-    </footer> 
+        <a target="_blank" href="https://www.facebook.com" class="fa fa-facebook">Facebook</a>
+        <a target="_blank" href="https://www.instagram.com" class="fa fa-instagram">Instagram</a>
+        <a target="_blank" href="https://www.youtube.com/" class="fa fa-youtube">Youtube</a>
+    </footer>
 </body>
+
 </html>
