--- a/plants.html
+++ b/plants.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,143 +13,145 @@
 
 <body>
     <header>
-        <h1 id="Title">Keeping Fish Simple</h1>                   
+        <h1 id="name">Keeping Fish Simple</h1>
         <nav>
             <ul id="menu">
-                <li><a href="plants.html">Plants</a></li>                
+                <li><a href="plants.html">Plants</a></li>
                 <li><a href="fish.html">Fish</a></li>
                 <li><a href="index.html">Home</a></li>
             </ul>
-        </nav>          
-    </header>        
-<h1>Plants</h1>
-<p>Plants are a great addition to any aquarium. Not only do the aquarium plants look great, they also help cycle your aquarium and are a natural way to reduce Nitrates in the water column, as they feed off the Nitrates in the water.</p>
+        </nav>
+    </header>
+    <h1>Plants</h1>
+    <p>Plants are a great addition to any aquarium. Not only do the aquarium plants look great, they also help cycle
+        your aquarium and are a natural way to reduce Nitrates in the water column, as they feed off the Nitrates in the
+        water.</p>
 
-<h2>Plants for Beginners</h2>
+    <h2>Plants for Beginners</h2>
 
-<section>
-<h3>Anubias</h3>
-<img src='../assets/images/anubias.jpg' alt="Anubias aquarium plant">
-<table>
-    <thead>
-        <tr>
-            <th>Category</th>
-            <th>Rating</th>
-        </tr>
-    <tbody>
-        <tr>
-            <td>Care Level</td>
-            <td>Easy</td>
-        </tr>
-        <tr>
-            <td>Placement</td>
-            <td>Foreground</td>
-        </tr>
-        <tr>
-            <td>Lighting</td>
-            <td>Low-Moderate</td>
-        </tr>
-        <tr>
-            <td>Water temperature</td>
-            <td>22-27</td>
-        </tr>
-    </tbody>
-    </thead>
-</table>
-</section>
+    <section>
+        <h3>Anubias</h3>
+        <img src='../assets/images/anubias.jpg' alt="Anubias aquarium plant">
+        <table>
+            <thead>
+                <tr>
+                    <th>Category</th>
+                    <th>Rating</th>
+                </tr>
+            <tbody>
+                <tr>
+                    <td>Care Level</td>
+                    <td>Easy</td>
+                </tr>
+                <tr>
+                    <td>Placement</td>
+                    <td>Foreground</td>
+                </tr>
+                <tr>
+                    <td>Lighting</td>
+                    <td>Low-Moderate</td>
+                </tr>
+                <tr>
+                    <td>Water temperature</td>
+                    <td>22-27</td>
+                </tr>
+            </tbody>
+            </thead>
+        </table>
+    </section>
 
-<section>
-<h3>Java Fern</h3>
-<img src='../assets/images/Java Fern.jpg' alt="Java Fern aquarium plant">
-<table>
-    <thead>
-        <tr>
-            <th>Category</th>
-            <th>Rating</th>
-        </tr>
-    <tbody>
-        <tr>
-            <td>Care Level</td>
-            <td>Easy</td>
-        </tr>
-        <tr>
-            <td>Placement</td>
-            <td>Mid to Background</td>
-        </tr>
-        <tr>
-            <td>Lighting</td>
-            <td>Low-Moderate</td>
-        </tr>
-        <tr>
-            <td>Water temperature</td>
-            <td>20-27</td>
-        </tr>
-    </tbody>
-    </thead>
-</table>
-</section>
+    <section>
+        <h3>Java Fern</h3>
+        <img src='../assets/images/Java Fern.jpg' alt="Java Fern aquarium plant">
+        <table>
+            <thead>
+                <tr>
+                    <th>Category</th>
+                    <th>Rating</th>
+                </tr>
+            <tbody>
+                <tr>
+                    <td>Care Level</td>
+                    <td>Easy</td>
+                </tr>
+                <tr>
+                    <td>Placement</td>
+                    <td>Mid to Background</td>
+                </tr>
+                <tr>
+                    <td>Lighting</td>
+                    <td>Low-Moderate</td>
+                </tr>
+                <tr>
+                    <td>Water temperature</td>
+                    <td>20-27</td>
+                </tr>
+            </tbody>
+            </thead>
+        </table>
+    </section>
 
-<section>
-<h3>Amazon Sword</h3>
-<img src='../assets/images/AmazonSword1.jpg' alt="Amazon Sword aquarium plant">
-<table>
-    <thead>
-        <tr>
-            <th>Category</th>
-            <th>Rating</th>
-        </tr>
-    <tbody>
-        <tr>
-            <td>Care Level</td>
-            <td>Easy</td>
-        </tr>
-        <tr>
-            <td>Placement</td>
-            <td>Background</td>
-        </tr>
-        <tr>
-            <td>Lighting</td>
-            <td>Low-Moderate</td>
-        </tr>
-        <tr>
-            <td>Water temperature</td>
-            <td>20-27</td>
-        </tr>
-    </tbody>
-    </thead>
-</table>
-</section>
+    <section>
+        <h3>Amazon Sword</h3>
+        <img src='../assets/images/AmazonSword1.jpg' alt="Amazon Sword aquarium plant">
+        <table>
+            <thead>
+                <tr>
+                    <th>Category</th>
+                    <th>Rating</th>
+                </tr>
+            <tbody>
+                <tr>
+                    <td>Care Level</td>
+                    <td>Easy</td>
+                </tr>
+                <tr>
+                    <td>Placement</td>
+                    <td>Background</td>
+                </tr>
+                <tr>
+                    <td>Lighting</td>
+                    <td>Low-Moderate</td>
+                </tr>
+                <tr>
+                    <td>Water temperature</td>
+                    <td>20-27</td>
+                </tr>
+            </tbody>
+            </thead>
+        </table>
+    </section>
 
-<section>
-<h3>Cryptocoryne</h3>
-<img src='../assets/images/cryptocoryne.jpg' alt="cryptocoryne aquarium plant">
-<table>
-    <thead>
-        <tr>
-            <th>Category</th>
-            <th>Rating</th>
-        </tr>
-    <tbody>
-        <tr>
-            <td>Care Level</td>
-            <td>Easy</td>
-        </tr>
-        <tr>
-            <td>Placement</td>
-            <td>Mid ground</td>
-        </tr>
-        <tr>
-            <td>Lighting</td>
-            <td>Low-Moderate</td>
-        </tr>
-        <tr>
-            <td>Water temperature</td>
-            <td>20-26</td>
-        </tr>
-    </tbody>
-    </thead>
-</table>
-</section>
+    <section>
+        <h3>Cryptocoryne</h3>
+        <img src='../assets/images/cryptocoryne.jpg' alt="cryptocoryne aquarium plant">
+        <table>
+            <thead>
+                <tr>
+                    <th>Category</th>
+                    <th>Rating</th>
+                </tr>
+            <tbody>
+                <tr>
+                    <td>Care Level</td>
+                    <td>Easy</td>
+                </tr>
+                <tr>
+                    <td>Placement</td>
+                    <td>Mid ground</td>
+                </tr>
+                <tr>
+                    <td>Lighting</td>
+                    <td>Low-Moderate</td>
+                </tr>
+                <tr>
+                    <td>Water temperature</td>
+                    <td>20-26</td>
+                </tr>
+            </tbody>
+            </thead>
+        </table>
+    </section>
 
     <footer>
         <form>
@@ -160,11 +163,12 @@
             <input type="submit" value="Sign Up">
 
         </form>
-        
-        <a target= "_blank" href="https://www.facebook.com" class="fa fa-facebook">Facebook</a>
-        <a target= "_blank" href="https://www.instagram.com" class="fa fa-instagram">Instagram</a>
-        <a target= "_blank" href="https://www.youtube.com/" class="fa fa-youtube">Youtube</a>
-    </footer> 
-    
+
+        <a target="_blank" href="https://www.facebook.com" class="fa fa-facebook">Facebook</a>
+        <a target="_blank" href="https://www.instagram.com" class="fa fa-instagram">Instagram</a>
+        <a target="_blank" href="https://www.youtube.com/" class="fa fa-youtube">Youtube</a>
+    </footer>
+
 </body>
+
 </html>
