add background color to footer

--- a/fish.html
+++ b/fish.html
@@ -15,15 +15,23 @@
 <body>
 
     <header>
-        <h1 id="Title">Keeping Fish Simple</h1>
+
+        <a href="index.html">
+            <h1 id="name">Keeping Fish Simple</h1>
+        </a>
         <nav>
-            <ul id="menu">
+            <ul id="tabs">
                 <li><a href="plants.html">Plants</a></li>
                 <li><a href="fish.html">Fish</a></li>
                 <li><a href="index.html">Home</a></li>
             </ul>
         </nav>
+
     </header>
+
+    <section id="outer">
+        <div id="hero-image"></div>
+    </section>
 
     <h1>Choosing your fish</h1>
     <p>
