--- a/plants.html
+++ b/plants.html
@@ -13,19 +13,30 @@
 
 <body>
     <header>
-        <h1 id="name">Keeping Fish Simple</h1>
+        <a href="index.html">
+            <h1 id="name">Keeping Fish Simple</h1>
+        </a>
         <nav>
-            <ul id="menu">
+            <ul id="tabs">
                 <li><a href="plants.html">Plants</a></li>
                 <li><a href="fish.html">Fish</a></li>
                 <li><a href="index.html">Home</a></li>
             </ul>
         </nav>
+
     </header>
+
+    <section id="outer">
+        <div id="hero-image"></div>
+    </section>
+
+
+    <section>
     <h1>Plants</h1>
     <p>Plants are a great addition to any aquarium. Not only do the aquarium plants look great, they also help cycle
         your aquarium and are a natural way to reduce Nitrates in the water column, as they feed off the Nitrates in the
         water.</p>
+    </section>
 
     <h2>Plants for Beginners</h2>
 
