--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul id="tabs">
                 <li><a href="plants.html">Plants</a></li>
                 <li><a href="fish.html">Fish</a></li>
-                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="index.html">Home</a></li>
             </ul>
         </nav>
 
