started to add flex box to main home page, and add icons

--- a/fish.html
+++ b/fish.html
@@ -21,9 +21,9 @@
         </a>
         <nav>
             <ul id="tabs">
-                <li><a href="plants.html">Plants</a></li>
-                <li><a href="fish.html">Fish</a></li>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="plants.html">Plants</a><i class="fas fa-seedling"></i></li>
+                <li><a href="fish.html">Fish</a><i class="fas fa-fish"></i></li>
+                <li><a href="index.html">Home</a><i class="fas fa-home"></i></li>
             </ul>
         </nav>
 
@@ -33,7 +33,7 @@
         <div id="hero-image"></div>
     </section>
 
-    <h1>Choosing your fish</h1>
+    <h2>Choosing your fish</h2>
     <p>
         Selecting your fish for your new aquarium is the most exciting part of setting up a new tank. However, for
         begginers the choice can be overwhelming, as there are so many choices to choose from and not every fish can
@@ -162,7 +162,7 @@
 
     <section>
         <h2>Neon Tetra</h2>
-        <img src='../assets/images/Neon Tetra.jpg' alt="Neon Tetra Fish">
+        <img src='../assets/images/Neon Tetra.jpg' alt="Neon Tetra Fish" id="neon">
 
         <table>
             <tr>
@@ -272,10 +272,12 @@
             <input type="submit" value="Sign Up">
 
         </form>
-        <a target="_blank" href="https://www.facebook.com" class="fa fa-facebook">Facebook</a>
-        <a target="_blank" href="https://www.instagram.com" class="fa fa-instagram">Instagram</a>
-        <a target="_blank" href="https://www.youtube.com/" class="fa fa-youtube">Youtube</a>
+        <a target="_blank" href="https://www.facebook.com" class="fa fa-facebook"></a>
+        <a target="_blank" href="https://www.instagram.com" class="fa fa-instagram"></a>
+        <a target="_blank" href="https://www.youtube.com/" class="fa fa-youtube"></a>
     </footer>
+
+    <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
