--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </a>
         <nav>
             <ul id="tabs">
-                <li><a href="plants.html">Plants</a></li>
-                <li><a href="fish.html">Fish</a></li>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="plants.html">Plants</a><i class="fas fa-seedling"></i></li>
+                <li><a href="fish.html">Fish</a><i class="fas fa-fish"></i></li>
+                <li><a href="index.html">Home</a><i class="fas fa-home"></i></li>
             </ul>
         </nav>
 
@@ -43,27 +43,34 @@
 
     <section>
         <h2>What you need to get started</h2>
-        <p>When starting your fish keeping hobby, there are a few things to consider when beginning your journey. In
+        <p> When starting your fish keeping hobby, there are a few things to consider when beginning your journey. In
             this section we will go over what you need to start and some things you need to think about before making a
             purchase.</p>
-
+    </section>
+    <br>
+    <section id="container">
         <div>
             <h3>Location, Location, Location</h3>
+            <div id="image"></div>
             <p>Picking a location for your aquarium is more important than you think. Try not to have it beside windows
                 or heating or aircon vents. As this will cause algae blooms with the light and temperature fluctuations
-                with the heat and aircon vents</p>
+                with the heat and aircon vents
+            </p>
         </div>
+        <br>
         <div>
             <h3>Cleaning/Maintence equipment</h3>
             <p>Having cleaning and Maintence equipment will make you job as a fish keeper much easier. We recommend
                 having a gravel syphon, glass cleaner (sponge or magnetic), net and a algae remover.</p>
         </div>
+        <br>
         <div>
             <h3>Tank (bigger is better)</h3>
             <p>Despite what you might think, having a bigger aquarium is easier to care for than smaller one. The more
                 volume of water you have, the easier it is to maintain and balance your aquarium environment. We
                 recommend at least 20 gallons (75 litters)</p>
         </div>
+        <br>
         <div>
             <h3>Filter</h3>
             <p>The filter is an important part of keeping a healthy aquarium. This will help clean your water and filter
@@ -71,24 +78,29 @@
                 sure that whichever filter you choose that it is sufficient enough to deal with the volume of water you
                 have in your aquarium.</p>
         </div>
+        <br>
         <div>
             <h3>Heater and Thermometer</h3>
             <p>Fish can't produce their own body heat, so it’s important to keep them at their ideal temperature with a
                 heater. It’s also advise to have a thermometer, this will help you keep track on the temperature of the
                 water.</p>
         </div>
+        <br>
         <div>
             <h3>Lighting</h3>
             <p>If your aquarium comes with a built in light, that's great! Just remember to have your light on between
                 8-12 hours per day. Once you get more comfortable with your aquarium, maybe think of upgrading your
                 light. Now you can get lights with timers and adjustable lighting.</p>
         </div>
+        <br>
         <div>
             <h3>Substrate</h3>
             <p>There are many types of aquarium substrates, from gravel and stones to sand. Having substrate is a great
                 place for beneficial bacteria to live, it also makes you aquarium look more aesthetically pleasing.</p>
         </div>
+        <br>
     </section>
+
     <section>
         <h2>Nitrogen Cycle</h2>
         <p>The Nitrogen Cyccle is a very importnat part when starting your aquarium. The basics of the Nitrogen Cycle is
@@ -112,11 +124,17 @@
             <input type="submit" value="Sign Up">
         </form>
 
-        <a target="_blank" href="https://www.facebook.com" class="fa fa-facebook">Facebook</a>
-        <a target="_blank" href="https://www.instagram.com" class="fa fa-instagram">Instagram</a>
-        <a target="_blank" href="https://www.youtube.com/" class="fa fa-youtube">Youtube</a>
+        <ul>
+            <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit out facebook page (open in new tab)"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit out facebook page (open in new tab)"><i class="fab fa-instagram"></i></li>
+            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit out facebook page (open in new tab)"><i class="fab fa-youtube"></i></a></li>
+        </ul>
     </footer>
 
+    <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
