--- a/plants.html
+++ b/plants.html
@@ -18,9 +18,9 @@
         </a>
         <nav>
             <ul id="tabs">
-                <li><a href="plants.html">Plants</a></li>
-                <li><a href="fish.html">Fish</a></li>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="plants.html">Plants</a><i class="fas fa-seedling"></i></li>
+                <li><a href="fish.html">Fish</a><i class="fas fa-fish"></i></li>
+                <li><a href="index.html">Home</a><i class="fas fa-home"></i></li>
             </ul>
         </nav>
 
@@ -32,7 +32,7 @@
 
 
     <section>
-    <h1>Plants</h1>
+    <h2>Plants</h2>
     <p>Plants are a great addition to any aquarium. Not only do the aquarium plants look great, they also help cycle
         your aquarium and are a natural way to reduce Nitrates in the water column, as they feed off the Nitrates in the
         water.</p>
@@ -175,11 +175,12 @@
 
         </form>
 
-        <a target="_blank" href="https://www.facebook.com" class="fa fa-facebook">Facebook</a>
-        <a target="_blank" href="https://www.instagram.com" class="fa fa-instagram">Instagram</a>
-        <a target="_blank" href="https://www.youtube.com/" class="fa fa-youtube">Youtube</a>
+        <a target="_blank" href="https://www.facebook.com" class="fa fa-facebook"></a>
+        <a target="_blank" href="https://www.instagram.com" class="fa fa-instagram"></a>
+        <a target="_blank" href="https://www.youtube.com/" class="fa fa-youtube"></a>
     </footer>
 
+    <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
