add max width and height to fish images

--- a/fish.html
+++ b/fish.html
@@ -44,7 +44,7 @@
     <section>
         <h1>Center Piece Fish</h1>
         <h2 class="angelfish">Angelfish</h2>
-        <img src='../assets/images/Angelfish.jpg' alt="Angelfish">
+        <img src='../assets/images/Angelfish.jpg' alt="Angelfish" class="fish-image">
         <table>
             <tr>
                 <th>Tank Size</th>
@@ -62,8 +62,8 @@
     </section>
 
     <section>
-        <h2>Honey Gourami</h2>
-        <img src='../assets/images/Honey Gourami.jpg' alt="Honey Gourami fish">
+        <h2 >Honey Gourami</h2>
+        <img src='../assets/images/Honeygourami.jpg' alt="Honey Gourami fish" class="fish-image">
         <table>
             <tr>
                 <th>Tank Size</th>
@@ -82,7 +82,7 @@
 
     <section>
         <h2>Betta</h2>
-        <img src='../assets/images/Betta.jpg' alt="Betta fish">
+        <img src='../assets/images/Betta.jpg' alt="Betta fish" class="fish-image">
         <table>
             <tr>
                 <th>Tank Size</th>
@@ -103,7 +103,7 @@
 
     <section>
         <h2>Rummy Nose Tetra</h2>
-        <img src='../assets/images/Rummy Nose tetra.jpg' alt="Rummy Nose Tetra Fish">
+        <img src='../assets/images/Rummy Nose tetra.jpg' alt="Rummy Nose Tetra Fish" class="fish-image">
         <table>
             <tr>
                 <th>Tank Size</th>
@@ -122,7 +122,7 @@
 
     <section>
         <h2>Cherry Barb</h2>
-        <img src='./assets/images/Cherry Barb.jpg' alt="Cherry Barb Fish">
+        <img src='./assets/images/Cherry Barb.jpg' alt="Cherry Barb Fish" class="fish-image">
 
         <table>
             <tr>
@@ -142,7 +142,7 @@
 
     <section>
         <h2>Ember Tetra</h2>
-        <img src='../assets/images/Ember tetra.jpg' alt="Ember Tetra fish">
+        <img src='../assets/images/Ember tetra.jpg' alt="Ember Tetra fish" class="fish-image">
 
         <table>
             <tr>
@@ -162,7 +162,7 @@
 
     <section>
         <h2>Neon Tetra</h2>
-        <img src='../assets/images/Neon Tetra.jpg' alt="Neon Tetra Fish" id="neon">
+        <img src='../assets/images/Neon Tetra.jpg' alt="Neon Tetra Fish" class="fish-image">
 
         <table>
             <tr>
@@ -184,7 +184,7 @@
 
     <section>
         <h2>Bronze Corydoras</h2>
-        <img src='../assets/images/Bronze corydors.jpg' alt="Bronze Corydora catfish">
+        <img src='../assets/images/Bronze corydors.jpg' alt="Bronze Corydora catfish" class="fish-image">
 
         <table>
             <tr>
@@ -204,7 +204,7 @@
 
     <section>
         <h2>Panda Corydoras</h2>
-        <img src='../assets/images/panda-corydoras.jpg' alt="Panda Corydora catfish">
+        <img src='../assets/images/panda-corydoras.jpg' alt="Panda Corydora catfish" class="fish-image">
 
         <table>
             <tr>
@@ -224,7 +224,7 @@
 
     <section>
         <h2>Kuhli Loach</h2>
-        <img src='../assets/images/kuhli-loach.jpg' alt="Kuhli Loach Fish">
+        <img src='../assets/images/kuhli-loach.jpg' alt="Kuhli Loach Fish" class="fish-image">
 
         <table>
             <tr>
@@ -244,7 +244,7 @@
 
     <section>
         <h2>Hillstream Loach</h2>
-        <img src='../assets/images/Hillstream Loach.jpg' alt="Hillstream Loach Fish">
+        <img src='../assets/images/Hillstream Loach.jpg' alt="Hillstream Loach Fish" class="fish-image">
 
         <table>
             <tr>
