add style to footer and social links]#

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     <footer>
 
-        <form>
+        <form id="Sign-up">
             <h5>Sign up for our Weekly NewsLetter</h5>
             <label for="fname">First name:</label><br>
             <input type="text" id="fname" name="fname"><br>
@@ -132,7 +132,7 @@
             <input type="submit" value="Sign Up">
         </form>
 
-        <ul>
+        <ul id="social-links">            
             <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
                     aria-label="Visit out facebook page (open in new tab)"><i class="fab fa-facebook"></i></a></li>
             <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
