--- a/plants.html
+++ b/plants.html
@@ -175,9 +175,15 @@
 
         </form>
 
-        <a target="_blank" href="https://www.facebook.com" class="fa fa-facebook"></a>
-        <a target="_blank" href="https://www.instagram.com" class="fa fa-instagram"></a>
-        <a target="_blank" href="https://www.youtube.com/" class="fa fa-youtube"></a>
+        <ul id="social-links">            
+            <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit out facebook page (open in new tab)"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit out facebook page (open in new tab)"><i class="fab fa-instagram"></i></li>
+            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit out facebook page (open in new tab)"><i class="fab fa-youtube"></i></a></li>
+        </ul>
+        
     </footer>
 
     <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
