--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
     <footer>
 
         <form id="Sign-up">
-            <h5>Sign up for our Weekly NewsLetter</h5>
+            <h4>Sign up for our Weekly NewsLetter</h4>
             <label for="fname">First name:</label><br>
             <input type="text" id="fname" name="fname"><br>
             <label for="lname">Last Name:</label><br>
             <input type="text" id="lname" name="lname"><br>
-            <input type="submit" value="Sign Up">
+            <input type="submit" value="Sign Up" id="button">
         </form>
 
         <ul id="social-links">            
