add style to header and also P element in the flexbox

--- a/fish.html
+++ b/fish.html
@@ -263,14 +263,13 @@
     </section>
 
     <footer>
-        <form>
-            <h5>Sign up for our Weekly NewsLetter</h5>
+        <form id="Sign-up">
+            <h4>Sign up for our Weekly NewsLetter</h4>
             <label for="fname">First name:</label><br>
             <input type="text" id="fname" name="fname"><br>
             <label for="lname">Last Name:</label><br>
             <input type="text" id="lname" name="lname"><br>
-            <input type="submit" value="Sign Up">
-
+            <input type="submit" value="Sign Up" id="button">
         </form>
         
         <ul id="social-links">
