--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
         <h2>What you need to get started</h2>
         <p> When starting your fish keeping hobby, there are a few things to consider when beginning your journey. In
             this section we will go over what you need to start and some things you need to think about before making a
-            purchase.</p>
+            purchase. As part of your equipment we reccomend getting <a href="https://apifishcare.com/product/freshwater-master-test-kit">API Water Test Kit.</a>This will help
+            you test the level of Ammonia, Nitrites and Nitrates in your aquarium water.</p>
+</p>
     </section>
     <br>
     <section class="container-1">
@@ -59,8 +61,8 @@
         </div>
         
         <div class="box-1">
-            <h3>Cleaning/Maintence equipment</h3>
-            <img src='../assets/images/cleaning kit.jpg' alt="aquarium cleaning equipment" class="box-1-image"> 
+            <h3>Cleaning/Maintence equipment</h3>    
+            <img src='../assets/images/cleaning kit.jpg' alt="Fish tank cleaning equipment" class="box-1-image">        
             <p>Having cleaning and Maintence equipment will make you job as a fish keeper much easier. We recommend
                 having a gravel syphon, glass cleaner (sponge or magnetic), net and a algae remover.</p>
         </div>
@@ -114,10 +116,7 @@
         <p>The Nitrogen Cyccle is a very importnat part when starting your aquarium. The basics of the Nitrogen Cycle is
             the procees where the ammonia (which is extremely toxic to fish) produced from fish waste and uneaten food
             is broken dowen to Nitrite and further again to Nitrates (which is removed with water changes)</p>
-            <img src='../assets/images/Nitogen cycle.png' alt="Nitogen cycle" class="box-2-image"> 
-        <p>Pro tip, to test the water we recommend getting <a
-                href="https://apifishcare.com/product/freshwater-master-test-kit">API Water Test Kit.</a>This will help
-            you test the level of Ammonia, Nitrites and Nitrates in your aquarium water.</p>
+            <img src='../assets/images/Nitogen cycle.png' alt="Nitogen cycle"> 
         <br>
     </section>
 
